--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,6 +28,13 @@ stages:
     pool:
       vmImage: $(vmImageName)
     steps:
+    - task: Bash@3
+      inputs:
+        targetType: 'inline'
+        script: |
+          pwd
+          
+          cd ./src/poi
     - task: Docker@2
       displayName: Build and push an image to container registry
       inputs:
